--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,19 @@
+---
+import Layout from '../layouts/Layout.astro';
+import Card from '../components/Card.astro';
+---
+
 <!doctype html>
 <html lang="en">
   <head>
 
   </head>
-  <body>
-	
+  <body class=" bg-black">
+	<h1 class="font-title text-7xl md:text-[112px] text-center leading-none px-4 py-10 hero-title z-10 text-white"
+  >Aditi Pawase</h1>
+  <div class="flex items-center justify-center px-4 py-10"></div>
+   <h3  class="font-title text-7xl md:text-[32px] justify-center inline-block p-4 text-center px-4 leading-none border border-white rounded-md hero-title z-10 text-white ">Student/Web developer</h3>
+	</div>
+
   </body>
   </html>
