--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,27 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
----
 
+---
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap');
+  </style>
 <!doctype html>
 <html lang="en">
   <head>
 
   </head>
   <body class=" bg-black">
-	<h1 class="font-title text-7xl md:text-[112px] text-center leading-none px-4 py-10 hero-title z-10 text-white"
+    <div class="">
+	<h1 class="font-custom text-5xl md:text-[112px] mt-20 text-center leading-none  px-4 py-20 hero-title z-10 text-white"
   >Aditi Pawase</h1>
-  <div class="flex items-center justify-center px-4 py-10"></div>
-   <h3  class="font-title text-7xl md:text-[32px] justify-center inline-block p-4 text-center px-4 leading-none border border-white rounded-md hero-title z-10 text-white ">Student/Web developer</h3>
-	</div>
+</div>
+   <h3 class="text-myorange [text-shadow:1px_3px_8px_var(--tw-shadow-color)] shadow-myorange relative bottom-20  right-60 text-right font-semibold px-20   justify-end  md:text-[20px]" >< Aditi Pawase/></h3>
+  <div class="flex items-centre  relative left-40 justify-centre content-centre  px-4 py-0">
+   
+   <h3  class="font-title text-4xlbv  md:text-[20px] justify-center inline-block p-4 text-center ml-20 mr-5 leading-none border border-cyan-900 rounded-3xl  bg-cyan-900 hero-title z-10 text-white ">Student</h3>
+   <h3  class="font-title text-4xl md:text-[20px] justify-center inline-block p-4 text-center ml-3 leading-none border border-cyan-900 rounded-3xl  bg-cyan-900 hero-title z-10 text-white ">Web developer</h3>
+	</div> 
 
   </body>
   </html>
