--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,69 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import Socials from '../components/Socials.astro';
+const technologies = [
+  {
+    name: 'React JS',
+    link: 'https://react.dev/',
+  },
+  {
+    name: 'Next JS',
+    link: 'https://nextjs.org/',
+  },
+  {
+    name: 'Astro JS',
+    link: 'https://astro.build/',
+  },
+  {
+    name: 'MySQL',
+    link: 'https://mysql.com/',
+  },
+  {
+    name: 'MongoDB',
+    link: 'https://mongodb.com/',
+  },
+  // {
+  //   name: 'SocketIO',
+  //   link: 'https://socket.io/',
+  // },
+  // {
+  //   name: 'ElectronJS',
+  //   link: 'https://electronjs.org/',
+  // },
+  // {
+  //   name: 'Firebase',
+  //   link: 'https://firebase.google.com/',
+  // },
+  // {
+  //   name: 'Google Admin',
+  //   link: 'https://workspace.google.com/intl/en_in/products/admin/',
+  // },
+  // {
+  //   name: 'Flask',
+  //   link: 'https://flask.palletsprojects.com/',
+  // },
+  {
+    name: 'WiX',
+    link: 'https://wix.com/',
+  },
+  // {
+  //   name: 'Framer',
+  //   link: 'https://framer.com/',
+  // },
+  {
+    name: 'WordPress',
+    link: 'https://wordpress.org/',
+  },
+  // {
+  //   name: 'Linux',
+  //   link: 'https://www.linuxfoundation.org/',
+  // },
+
+]
 
 ---
+
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap');
   </style>
@@ -11,17 +72,27 @@ import Card from '../components/Card.astro';
   <head>
 
   </head>
-  <body class=" bg-black">
+  <body class=" bg-bg_black">
     <div class="">
 	<h1 class="font-custom text-5xl md:text-[112px] mt-20 text-center leading-none  px-4 py-20 hero-title z-10 text-white"
   >Aditi Pawase</h1>
 </div>
    <h3 class="text-myorange [text-shadow:1px_3px_8px_var(--tw-shadow-color)] shadow-myorange relative bottom-20  right-60 text-right font-semibold px-20   justify-end  md:text-[20px]" >< Aditi Pawase/></h3>
-  <div class="flex items-centre  relative left-40 justify-centre content-centre  px-4 py-0">
+  <!-- <div class="flex items-centre  relative left-40 justify-centre content-centre  px-4 py-0">
    
    <h3  class="font-title text-4xlbv  md:text-[20px] justify-center inline-block p-4 text-center ml-20 mr-5 leading-none border border-cyan-900 rounded-3xl  bg-cyan-900 hero-title z-10 text-white ">Student</h3>
    <h3  class="font-title text-4xl md:text-[20px] justify-center inline-block p-4 text-center ml-3 leading-none border border-cyan-900 rounded-3xl  bg-cyan-900 hero-title z-10 text-white ">Web developer</h3>
-	</div> 
+	</div>  -->
+  <div class="flex items-center relative justify-center lg:justify-start lg:w-[60%] mx-auto px-4 py-0">
+    <h3 class="font-title text-4xl md:text-[20px] inline-block p-4 text-center ml-10 md:ml-5 leading-none border border-cyan-900 rounded-3xl bg-cyan-900 hero-title z-10 text-white">
+       Student
+    </h3>
+    <h3 class="font-title text-4xl md:text-[20px] inline-block p-4 text-center ml-3 leading-none border border-cyan-900 rounded-3xl bg-cyan-900 hero-title z-10 text-white">
+       Web Developer
+    </h3>
+ </div>
+ <Socials />
+ 
 
   </body>
   </html>
