--- a/src/layouts/Techstack.astro
+++ b/src/layouts/Techstack.astro
@@ -1,4 +1,10 @@
-<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 mt-60 gap-20 px-10">
+
+<div class="relative top-80 bottom--30px mt-2 bg-tech_clr">
+
+<!-- <h1 class="font-custom text-snow_white text-6xl relative text-centre justify-self-center top-30px ">TECHSTACK</h1> -->
+<h1 class="font-custom text-snow_white text-6xl relative text-centre py-12 justify-self-center top-30px" style="display: flex; justify-content: center; align-items: center;">TECHSTACK</h1>
+<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 mt-10 gap-20 px-10">
+
     <!-- Card 1 -->
     <div class="w-full  bg-black h-80 text-white border border-gray-700 rounded-lg p-6
      ml-6">
@@ -42,3 +48,4 @@
       </p>
       
     </div>
+  </div>
