--- a/src/components/Techstack.astro
+++ b/src/components/Techstack.astro
@@ -1,7 +1,9 @@
+---
 
-<div class="relative top-80 bottom--30px mt-2 bg-tech_clr">
 
-<!-- <h1 class="font-custom text-snow_white text-6xl relative text-centre justify-self-center top-30px ">TECHSTACK</h1> -->
+---
+<div>
+<div class=" pb-10 top-80 bottom--30px bg-bg_black mt-80">
 <h1 class="font-custom text-snow_white text-6xl relative text-centre py-12 justify-self-center top-30px" style="display: flex; justify-content: center; align-items: center;">TECHSTACK</h1>
 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 mt-10 gap-20 px-10">
 
@@ -9,6 +11,7 @@
     <div class="w-full  bg-black h-80 text-white border border-gray-700 rounded-lg p-6
      ml-6">
       <div class="font-bold text-xl mb-4">Frontend Technologies</div>
+      <img src="/public/css3.png" alt="" class="z-1 w-20 h-20">
       <p class="text-gray-400 text-base mb-4">
         
       </p>
@@ -33,7 +36,7 @@
       
     </div>
      <!-- Card 4 -->
-     <div class="w-full bg-black  text-white border mr-6 border-gray-700 h-80 rounded-lg p-6">
+     <div class="w-full bg-black  text-white border mr-6 border-gray-700 h-80 relative left-7 rounded-lg p-6">
       <div class="font-bold text-xl mb-4">Tools</div>
       <p class="text-gray-400 text-base mb-4">
         
@@ -49,3 +52,5 @@
       
     </div>
   </div>
+ <img src="C:\Users\aditi\OneDrive\Desktop\adiport\tender-telescope\src\images\download.jpeg" class="w-20 h-20" alt="">
+</div>
