--- a/src/components/Techstack.astro
+++ b/src/components/Techstack.astro
@@ -1,56 +1,76 @@
 ---
 
-
 ---
-<div>
-<div class=" pb-10 top-80 bottom--30px bg-bg_black mt-80">
-<h1 class="font-custom text-snow_white text-6xl relative text-centre py-12 justify-self-center top-30px" style="display: flex; justify-content: center; align-items: center;">TECHSTACK</h1>
-<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 mt-10 gap-20 px-10">
 
-    <!-- Card 1 -->
-    <div class="w-full  bg-black h-80 text-white border border-gray-700 rounded-lg p-6
-     ml-6">
-      <div class="font-bold text-xl mb-4">Frontend Technologies</div>
-      <img src="/public/css3.png" alt="" class="z-1 w-20 h-20">
-      <p class="text-gray-400 text-base mb-4">
-        
-      </p>
-      
+<div>
+  <div class="pb-10 top-80 bottom--30px bg-bg_black mt-80">
+    <h1
+      class="font-custom text-snow_white text-6xl relative text-centre py-12 justify-self-center top-30px"
+      style="display: flex; justify-content: center; align-items: center;"
+    >
+      TECHSTACK
+    </h1>
+    <div
+      class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 mt-10 gap-20 px-10"
+    >
+      <!-- Card 1 -->
+      <div
+        class="w-full bg-black h-80 text-white border border-gray-700 rounded-lg p-6
+     ml-6"
+      >
+        <div class="font-bold text-xl mb-4">Frontend Technologies</div>
+        <div class="flex flex-wrap gap-6">
+          <img src="/public/html5.png" alt="" class="z-1 w-14 h-14" />
+          <img src="/public/css3.png" alt="" class="z-1 w-14 h-14" />
+          <img src="/public/js.png" alt="" class="z-1 w-14 h-14" />
+          <img src="/public/react.png" alt="" class="z-1 w-14 h-14" />
+          <img src="/public/jQuery.png" alt="" class="z-1 w-14 h-14" />
+          <img src="/nextjs.svg" alt="" class="z-1 w-14 h-14" />
+          
+
+        </div>
+        <p class="text-gray-400 text-base mb-4"></p>
+      </div>
+
+      <!-- Card 2 -->
+      <div
+        class="w-full bg-black text-white border border-gray-700 rounded-lg h-80 p-6"
+      >
+        <div class="font-bold text-xl mb-4">Backend Technologies</div>
+        <div class="flex flex-wrap gap-6">
+          <img src="/node.svg" alt="" class="z-1 w-14 h-14" />
+          <img src="/public/css3.png" alt="" class="z-1 w-14 h-14" />
+          <img src="/js.png" alt="" class="z-1 w-14 h-14" />
+        </div>
+        <p class="text-gray-400 text-base mb-4"></p>
+      </div>
+
+      <!-- Card 3 -->
+      <div
+        class="w-full bg-black text-white border mr-6 border-gray-700 h-80 rounded-lg p-6"
+      >
+        <div class="font-bold text-xl mb-4">Databases</div>
+        <p class="text-gray-400 text-base mb-4"></p>
+      </div>
+      <!-- Card 4 -->
+      <div
+        class="w-full bg-black text-white border mr-6 border-gray-700 h-80 relative left-7 rounded-lg p-6"
+      >
+        <div class="font-bold text-xl mb-4">Tools</div>
+        <p class="text-gray-400 text-base mb-4"></p>
+      </div>
+      <!-- Card 5 -->
+      <div
+        class="w-full bg-black text-white border mr-6 border-gray-700 h-80 rounded-lg p-6"
+      >
+        <div class="font-bold text-xl mb-4">Languages</div>
+        <p class="text-gray-400 text-base mb-4"></p>
+      </div>
     </div>
-  
-    <!-- Card 2 -->
-    <div class="w-full bg-black text-white border border-gray-700 rounded-lg h-80 p-6">
-      <div class="font-bold text-xl mb-4">Backend Technologies</div>
-      <p class="text-gray-400 text-base mb-4">
-        
-      </p>
-      
-    </div>
-  
-    <!-- Card 3 -->
-    <div class="w-full bg-black  text-white border mr-6 border-gray-700 h-80 rounded-lg p-6">
-      <div class="font-bold text-xl mb-4">Databases</div>
-      <p class="text-gray-400 text-base mb-4">
-        
-      </p>
-      
-    </div>
-     <!-- Card 4 -->
-     <div class="w-full bg-black  text-white border mr-6 border-gray-700 h-80 relative left-7 rounded-lg p-6">
-      <div class="font-bold text-xl mb-4">Tools</div>
-      <p class="text-gray-400 text-base mb-4">
-        
-      </p>
-      
-    </div>
-     <!-- Card 5 -->
-     <div class="w-full bg-black  text-white border mr-6 border-gray-700 h-80 rounded-lg p-6">
-      <div class="font-bold text-xl mb-4">Languages</div>
-      <p class="text-gray-400 text-base mb-4">
-        
-      </p>
-      
-    </div>
+    <img
+      src="C:\Users\aditi\OneDrive\Desktop\adiport\tender-telescope\src\images\download.jpeg"
+      class="w-20 h-20"
+      alt=""
+    />
   </div>
- <img src="C:\Users\aditi\OneDrive\Desktop\adiport\tender-telescope\src\images\download.jpeg" class="w-20 h-20" alt="">
 </div>
