--- a/src/components/Techstack.astro
+++ b/src/components/Techstack.astro
@@ -38,7 +38,7 @@
       >
         <div class="font-bold text-xl mb-4">Backend Technologies</div>
         <div class="flex flex-wrap gap-6">
-          <img src="/node.svg" alt="" class="z-1 w-14 h-14" />
+          <img src="/public/node.svg" alt="" class="z-1 w-14 h-14" />
           <img src="/public/css3.png" alt="" class="z-1 w-14 h-14" />
           <img src="/js.png" alt="" class="z-1 w-14 h-14" />
         </div>
