--- a/src/components/Getintouch.astro
+++ b/src/components/Getintouch.astro
@@ -1,12 +1,40 @@
-<div class="reltive top-50" >
-    <h1 class="text-snow_white absolute top-600"> Get in Touch
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis vitae ad possimus dignissimos exercitationem ea tempore impedit corporis? Ducimus alias, fugit magnam explicabo nam ratione laboriosam accusantium autem officia at.
-    </h1>
 
 
+<div class="top-50 mb-20 mt-20">
+  <h1
+    class="font-custom text-snow_white text-6xl relative text-centre py-12 justify-self-center top-30px"
+    style="display: flex; justify-content: center; align-items: center;"
+  >
+    GET IN TOUCH
+  </h1>
+  <div class="flex flex-row gap-10 justify-evenly">
+    <div
+      class="w-60 opacity-30 bg-gray-700 backdrop-blur-lg h-40 text-white border border-gray-700 rounded-lg p-2
+     ml-6"
+    >
 
+    <a href="tel:9511776557">9511776557</a>
+    
+    </div>
+    <div
+    class="w-60 opacity-30 bg-gray-700 backdrop-blur-lg h-40 text-white border border-gray-700 rounded-lg p-2
+   ml-6"
+  >
+  <h3 ><a href="mailto:aditisr0174@gamil.com" class="text-white">aditisr0174@gamil.com</a></h3>
+  </div>
+  <div
+  class="w-60 opacity-30 bg-gray-700 backdrop-blur-lg h-40 text-white border border-gray-700 rounded-lg p-2
+ ml-6"
+>
+<h3>Pune , Maharashta</h3>
+</div>
+<div
+class="w-60 opacity-30 bg-gray-700 backdrop-blur-lg h-40 text-white border border-gray-700 rounded-lg p-2
+ml-6"
+>
+<h3>BE (ENTC)</h3>
 
-
-
-
+<h3>DIT PIMPRI</h3>
+</div>
+  </div>
 </div>
