--- a/src/components/Techstack.astro
+++ b/src/components/Techstack.astro
@@ -25,7 +25,7 @@
           <img src="/public/js.png" alt="" class="z-1 w-14 h-14" />
           <img src="/public/react.png" alt="" class="z-1 w-14 h-14" />
           <img src="/public/jQuery.png" alt="" class="z-1 w-14 h-14" />
-          <img src="/nextjs.svg" alt="" class="z-1 w-14 h-14" />
+          <img src="tender-telescope\public\nodejs.svg" alt="" class="z-1 w-14 h-14" />
           
 
         </div>
@@ -67,10 +67,6 @@
         <p class="text-gray-400 text-base mb-4"></p>
       </div>
     </div>
-    <img
-      src="C:\Users\aditi\OneDrive\Desktop\adiport\tender-telescope\src\images\download.jpeg"
-      class="w-20 h-20"
-      alt=""
-    />
+   
   </div>
 </div>
