--- a/src/components/Techstack.astro
+++ b/src/components/Techstack.astro
@@ -25,7 +25,7 @@
           <img src="/public/js.png" alt="" class="z-1 w-14 h-14" />
           <img src="/public/react.png" alt="" class="z-1 w-14 h-14" />
           <img src="/public/jQuery.png" alt="" class="z-1 w-14 h-14" />
-          <img src="tender-telescope\public\nodejs.svg" alt="" class="z-1 w-14 h-14" />
+         
           
 
         </div>
@@ -38,9 +38,9 @@
       >
         <div class="font-bold text-xl mb-4">Backend Technologies</div>
         <div class="flex flex-wrap gap-6">
-          <img src="/public/node.svg" alt="" class="z-1 w-14 h-14" />
-          <img src="/public/css3.png" alt="" class="z-1 w-14 h-14" />
-          <img src="/js.png" alt="" class="z-1 w-14 h-14" />
+          <img src="/public/nodejs.svg" alt="" class="z-1 w-14 h-14" />
+          <img src="/public/express.svg" alt="" class="z-1 w-14 h-14" />
+          
         </div>
         <p class="text-gray-400 text-base mb-4"></p>
       </div>
@@ -49,7 +49,13 @@
       <div
         class="w-full bg-black text-white border mr-6 border-gray-700 h-80 rounded-lg p-6"
       >
+      
         <div class="font-bold text-xl mb-4">Databases</div>
+        <div class="flex flex-wrap gap-6">
+          <img src="/public/mysql.svg" alt="" class="z-1 w-14 h-14" />
+          <img src="/public/mongo.svg" alt="" class="z-1 w-14 h-14" />
+          
+        </div>
         <p class="text-gray-400 text-base mb-4"></p>
       </div>
       <!-- Card 4 -->
