Tachstack css updated

--- a/src/components/Getintouch.astro
+++ b/src/components/Getintouch.astro
@@ -9,27 +9,27 @@
   </h1>
   <div class="flex flex-row gap-10 justify-evenly">
     <div
-      class="w-60 opacity-30 bg-gray-700 backdrop-blur-lg h-40 text-white border border-gray-700 rounded-lg p-2
+      class="w-60  bg-tech_bg  h-40 text-white rounded-lg p-2
      ml-6"
     >
 
-    <a href="tel:9511776557">9511776557</a>
+    <a href="tel:9511776557"><h2 class="text-white opacity-100">9511776557</h2></a>
     
     </div>
     <div
-    class="w-60 opacity-30 bg-gray-700 backdrop-blur-lg h-40 text-white border border-gray-700 rounded-lg p-2
+    class="w-60  bg-tech_bg  h-40  rounded-lg p-2
    ml-6"
   >
-  <h3 ><a href="mailto:aditisr0174@gamil.com" class="text-white">aditisr0174@gamil.com</a></h3>
+  <h3 ><a href="mailto:aditisr0174@gamil.com" class="text-white">aditisr0174@gmail.com</a></h3>
   </div>
   <div
-  class="w-60 opacity-30 bg-gray-700 backdrop-blur-lg h-40 text-white border border-gray-700 rounded-lg p-2
+  class="w-60  bg-tech_bg h-40 text-white rounded-lg p-2
  ml-6"
 >
-<h3>Pune , Maharashta</h3>
+<h3>Pune , Maharashtra</h3>
 </div>
 <div
-class="w-60 opacity-30 bg-gray-700 backdrop-blur-lg h-40 text-white border border-gray-700 rounded-lg p-2
+class="w-60  bg-tech_bg h-40 text-white rounded-lg p-2
 ml-6"
 >
 <h3>BE (ENTC)</h3>
