--- a/src/components/Techstack.astro
+++ b/src/components/Techstack.astro
@@ -15,7 +15,7 @@
     >
       <!-- Card 1 -->
       <div
-        class="w-full bg-black h-80 text-white border border-gray-700 rounded-lg p-6
+        class="w-full bg-tech_bg  h-80 text-white  rounded-lg p-6
      ml-6"
       >
         <div class="font-bold text-xl mb-4">Frontend Technologies</div>
@@ -34,7 +34,7 @@
 
       <!-- Card 2 -->
       <div
-        class="w-full bg-black text-white border border-gray-700 rounded-lg h-80 p-6"
+        class="w-full bg-tech_bg  text-white border border-tech_bg rounded-lg h-80 p-6"
       >
         <div class="font-bold text-xl mb-4">Backend Technologies</div>
         <div class="flex flex-wrap gap-6">
@@ -47,7 +47,7 @@
 
       <!-- Card 3 -->
       <div
-        class="w-full bg-black text-white border mr-6 border-gray-700 h-80 rounded-lg p-6"
+        class="w-full bg-tech_bg  opacity-100 text-white  mr-6  h-80 rounded-lg p-6"
       >
       
         <div class="font-bold text-xl mb-4">Databases</div>
@@ -60,18 +60,24 @@
       </div>
       <!-- Card 4 -->
       <div
-        class="w-full bg-black text-white border mr-6 border-gray-700 h-80 relative left-7 rounded-lg p-6"
+        class="w-full bg-tech_bg  text-white  mr-6 relative left-7 rounded-lg p-6"
       >
         <div class="font-bold text-xl mb-4">Tools</div>
+        <div class="flex flex-wrap gap-6">
+          <img src="/public/git.svg" alt="" class="z-1 w-14 h-14" />
+          <img src="/public/github.svg" alt="" class="z-1 w-14 h-14" />
+          <img src="/public/figma.svg" alt="" class="z-1 w-14 h-14" />
+          
+        </div>
         <p class="text-gray-400 text-base mb-4"></p>
       </div>
       <!-- Card 5 -->
-      <div
+      <!-- <div
         class="w-full bg-black text-white border mr-6 border-gray-700 h-80 rounded-lg p-6"
       >
         <div class="font-bold text-xl mb-4">Languages</div>
         <p class="text-gray-400 text-base mb-4"></p>
-      </div>
+      </div> -->
     </div>
    
   </div>
