--- a/src/components/Techstack.astro
+++ b/src/components/Techstack.astro
@@ -10,75 +10,51 @@
     >
       TECHSTACK
     </h1>
-    <div
-      class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 mt-10 gap-20 px-10"
-    >
+    <div class="grid grid-cols-1 sm:grid-cols-1 lg:grid-cols-3 gap-10  mr-10 ml-10 px-6 mt-10">
       <!-- Card 1 -->
-      <div
-        class="w-full bg-tech_bg  h-80 text-white  rounded-lg p-6
-     ml-6"
-      >
+      <div class="w-full bg-tech_bg  text-white h-80 rounded-lg  p-6">
         <div class="font-bold text-xl mb-4">Frontend Technologies</div>
         <div class="flex flex-wrap gap-6">
-          <img src="/public/html5.png" alt="" class="z-1 w-14 h-14" />
-          <img src="/public/css3.png" alt="" class="z-1 w-14 h-14" />
-          <img src="/public/js.png" alt="" class="z-1 w-14 h-14" />
-          <img src="/public/react.png" alt="" class="z-1 w-14 h-14" />
-          <img src="/public/jQuery.png" alt="" class="z-1 w-14 h-14" />
-         
-          
-
+          <img src="/public/html5.png" alt="HTML5" class="lg:w-14 h-14 sm:h-20 w-20" />
+          <img src="/public/css3.png" alt="CSS3" class="lg:w-14 h-14 sm:h-20 w-20" />
+          <img src="/public/js.png" alt="JavaScript" class="lg:w-14 h-14 sm:h-20 w-20" />
+          <img src="/public/react.png" alt="React" class="lg:w-14 h-14 sm:h-20 w-20" />
+          <img src="/public/jQuery.png" alt="jQuery" class="lg:w-14 h-14 sm:h-20 w-20" />
         </div>
-        <p class="text-gray-400 text-base mb-4"></p>
       </div>
-
+    
       <!-- Card 2 -->
-      <div
-        class="w-full bg-tech_bg  text-white border border-tech_bg rounded-lg h-80 p-6"
-      >
+      <div class="w-full bg-tech_bg text-white h-80 rounded-lg p-6">
         <div class="font-bold text-xl mb-4">Backend Technologies</div>
         <div class="flex flex-wrap gap-6">
-          <img src="/public/nodejs.svg" alt="" class="z-1 w-14 h-14" />
-          <img src="/public/express.svg" alt="" class="z-1 w-14 h-14" />
-          
+          <img src="/public/nodejs.svg" alt="Node.js" class="lg:w-14 h-14 sm:h-20 w-20" />
+          <img src="/public/express.svg" alt="Express.js" class="lg:w-14 h-14 sm:h-20 w-20" />
         </div>
-        <p class="text-gray-400 text-base mb-4"></p>
       </div>
-
+    
       <!-- Card 3 -->
-      <div
-        class="w-full bg-tech_bg  opacity-100 text-white  mr-6  h-80 rounded-lg p-6"
-      >
-      
+      <div class="w-full bg-tech_bg text-white h-80 rounded-lg p-6">
         <div class="font-bold text-xl mb-4">Databases</div>
         <div class="flex flex-wrap gap-6">
-          <img src="/public/mysql.svg" alt="" class="z-1 w-14 h-14" />
-          <img src="/public/mongo.svg" alt="" class="z-1 w-14 h-14" />
-          
+          <img src="/public/mysql.svg" alt="MySQL" class="lg:w-14 h-14 sm:h-20 w-20" />
+          <img src="/public/mongo.svg" alt="MongoDB" class="lg:w-14 h-14 sm:h-20 w-20" />
         </div>
-        <p class="text-gray-400 text-base mb-4"></p>
       </div>
+    
       <!-- Card 4 -->
-      <div
-        class="w-full bg-tech_bg  text-white  mr-6 relative left-7 rounded-lg p-6"
-      >
+      <div class="w-full bg-tech_bg text-white h-80 rounded-lg p-6">
         <div class="font-bold text-xl mb-4">Tools</div>
         <div class="flex flex-wrap gap-6">
-          <img src="/public/git.svg" alt="" class="z-1 w-14 h-14" />
-          <img src="/public/github.svg" alt="" class="z-1 w-14 h-14" />
-          <img src="/public/figma.svg" alt="" class="z-1 w-14 h-14" />
-          
+          <img src="/public/git.svg" alt="Git" class="lg:w-14 h-14 sm:h-20 w-20" />
+          <img src="/public/github.svg" alt="GitHub" class="lg:w-14 h-14 sm:h-20 w-20" />
+          <img src="/public/figma.svg" alt="Figma" class="lg:w-14 h-14 sm:h-20 w-20" />
         </div>
-        <p class="text-gray-400 text-base mb-4"></p>
       </div>
-      <!-- Card 5 -->
-      <!-- <div
-        class="w-full bg-black text-white border mr-6 border-gray-700 h-80 rounded-lg p-6"
-      >
+    
+      <!-- Additional Card Placeholder -->
+      <!-- Uncomment if needed
+      <div class="w-full bg-tech_bg text-white rounded-lg p-6">
         <div class="font-bold text-xl mb-4">Languages</div>
-        <p class="text-gray-400 text-base mb-4"></p>
       </div> -->
     </div>
-   
-  </div>
 </div>
