--- a/src/components/Getintouch.astro
+++ b/src/components/Getintouch.astro
@@ -7,10 +7,10 @@
   >
     GET IN TOUCH
   </h1>
-  <div class="flex flex-row gap-10 justify-evenly">
+  <div class="flex lg:flex-row sm:flex-col sm:items-center  gap-10 justify-evenly">
     <div
-      class="w-60  bg-tech_bg  h-40 text-white rounded-lg p-2
-     ml-6"
+      class="lg:w-60 sm: w-full sm:mr-30 bg-tech_bg  h-40 text-white rounded-lg p-2
+     ml-12"
     >
 
     <a href="tel:9511776557"><h2 class="text-white opacity-100">9511776557</h2></a>
