--- a/src/components/Getintouch.astro
+++ b/src/components/Getintouch.astro
@@ -7,34 +7,38 @@
   >
     GET IN TOUCH
   </h1>
-  <div class="flex lg:flex-row sm:flex-col sm:items-center  gap-10 justify-evenly">
+  <div class="flex lg:flex-row sm:flex-col sm:items-end font-soc_text gap-10 justify-evenly">
     <div
-      class="lg:w-60 sm: w-full sm:mr-30 bg-tech_bg  h-40 text-white rounded-lg p-2
-     ml-12"
+      class="lg:w-60 flex justify-center  text-center items-center  sm:w-[50%] sm:mx-auto  bg-tech_bg  h-40 text-white rounded-lg p-2
+     "
     >
+  
 
-    <a href="tel:9511776557"><h2 class="text-white opacity-100">9511776557</h2></a>
+    <a href="tel:9511776557"><h2 class="text-white opacity-100"><img class=" w-12 h-12 justify-centre align-middle items-center"src="/public/phone-svgrepo-com.png" alt="">9511776557  </h2>
+  </a>
     
     </div>
     <div
-    class="w-60  bg-tech_bg  h-40  rounded-lg p-2
+    class="lg:w-60 flex justify-center pt-7 text-center items-center bg-tech_bg sm:w-[50%] sm:mx-auto  h-40  rounded-lg p-2
    ml-6"
   >
-  <h3 ><a href="mailto:aditisr0174@gamil.com" class="text-white">aditisr0174@gmail.com</a></h3>
+  <h3 ><a href="mailto:aditisr0174@gamil.com" class="text-white"><img class=" w-12 h-12 justify-centre items-center align-middle top-23rem left-14 relative"src="/public/email-1-svgrepo-com.png" alt="">aditisr0174@gmail.com</a></h3>
   </div>
   <div
-  class="w-60  bg-tech_bg h-40 text-white rounded-lg p-2
+  class="lg:w-60 flex justify-center pt-7 text-center items-center bg-tech_bg h-40 sm:w-[50%] sm:mx-auto  text-white rounded-lg p-2
  ml-6"
->
-<h3>Pune , Maharashtra</h3>
+><img class=" w-12 h-12 justify-centre align-middle items-center relative bottom-7 left-16"src="/public/location-pin-alt-1-svgrepo-com.png" alt="">
+
+<h3 class="mt-4 relative right-4">Pune , Maharashtra</h3>
 </div>
 <div
-class="w-60  bg-tech_bg h-40 text-white rounded-lg p-2
+class="lg:w-60 flex justify-center pt-7 text-center items-center bg-tech_bg h-40 sm:w-[50%] sm:mx-auto  text-white rounded-lg p-2
 ml-6"
 >
-<h3>BE (ENTC)</h3>
+<img class=" w-12 h-12 justify-centre align-middle relative bottom-10 left-16 items-center"src="/public/education11-svgrepo-com.png" alt="">
+<h3 class="relative right-10">BE (ENTC)</h3>
 
-<h3>DIT PIMPRI</h3>
+<h3 class="relative right-8">DIT PIMPRI</h3>
 </div>
   </div>
 </div>
