--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,8 @@ import Card from '../components/Card.astro';
 import Socials from '../components/Socials.astro';
 import Techstack from '../components/Techstack.astro';
 import Getintouch from '../components/Getintouch.astro';
+import Resume from '../components/resume.astro';
+
 const value = "< Aditi Pawase />";
 
 
@@ -48,6 +50,7 @@ const value = "< Aditi Pawase />";
 
 
  <div> <Getintouch /></div>
+ <div><Resume /></div>
 
  
 
