--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -1,5 +1,5 @@
 <div
-  class="flex bg-background  flex-wrap gap-8 border-[1.5px] mt-10 border-bg-gray-500 dark:border-gray-500 p-2 rounded-full lg:w-[20vw] md:w-[40vw] absolute bg-neutral-00 left-[22vw]"
+  class="flex bg-background  flex-wrap gap-8 border-[1.5px] mt-10 border-bg-gray-500 dark:border-gray-500 p-2 rounded-full lg:w-[20vw] md:w-[40vw]   absolute bg-neutral-00 left-[22vw] sm:ml-20 lg:ml-1"
 >
   <a
     href="https://github.com/adigithub10"
