--- a/src/components/Getintouch.astro
+++ b/src/components/Getintouch.astro
@@ -22,7 +22,7 @@
     class="lg:w-60 flex justify-center pt-7 text-center items-center bg-tech_bg sm:w-[50%] sm:mx-auto  h-40  rounded-lg p-2
    ml-6"
   >
-  <h3 ><a href="mailto:aditisr0174@gamil.com" class="text-white"><img class=" w-12 h-12 justify-centre items-center align-middle top-23rem left-14 relative"src="/public/email-1-svgrepo-com.png" alt="">aditisr0174@gmail.com</a></h3>
+  <h3 ><a href="mailto:aditisr0174@gmail.com" class="text-white relative bottom-4"><img class=" w-12 h-12 justify-centre items-center text-center flex align-middle relative left-14 "src="/public/email-1-svgrepo-com.png" alt="">aditisr0174@gmail.com</a></h3>
   </div>
   <div
   class="lg:w-60 flex justify-center pt-7 text-center items-center bg-tech_bg h-40 sm:w-[50%] sm:mx-auto  text-white rounded-lg p-2
