--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,8 @@ import Card from '../components/Card.astro';
 import Socials from '../components/Socials.astro';
 import Techstack from '../components/Techstack.astro';
 import Getintouch from '../components/Getintouch.astro';
-import Resume from '../components/resume.astro';
+import Quote from '../components/Quote.astro';
+import Resume from '../components/Resume.astro';
 
 const value = "< Aditi Pawase />";
 
@@ -15,13 +16,15 @@ const value = "< Aditi Pawase />";
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap');
   @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Spirax&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&display=swap');
   
   </style>
 <!doctype html>
 <html lang="en">
 
  
-  <body class=" bg-bg_black h-100" >
+  <body class=" bg-black h-100" >
     <div>
       <div>
 	<h1 class="font-custom text-5xl md:text-[112px] mt-20 text-center leading-none  px-4 py-20 hero-title z-10 text-white"
@@ -51,7 +54,7 @@ const value = "< Aditi Pawase />";
 
  <div> <Getintouch /></div>
  <div><Resume /></div>
-
+<div> <Quote /></div>
  
 
 
