--- a/src/components/Techstack.astro
+++ b/src/components/Techstack.astro
@@ -10,51 +10,138 @@
     >
       TECHSTACK
     </h1>
-    <div class="grid grid-cols-1 sm:grid-cols-1 lg:grid-cols-3 gap-10   mr-10 ml-10 px-6 mt-10">
+    <div
+      class="grid grid-cols-1 sm:grid-cols-1 lg:grid-cols-3 gap-10 mr-10 ml-10 px-6 mt-10"
+    >
       <!-- Card 1 -->
-      <div class="w-full bg-tech_bg  text-white h-80 rounded-lg  p-6">
+      <div class="w-full bg-tech_bg text-white h-80 rounded-lg p-6">
         <div class="font-bold text-xl mb-4">Frontend Technologies</div>
         <div class="flex flex-wrap gap-6">
-          <img src="/public/html5.png" alt="HTML5" class="lg:w-15 h-14 sm:h-20 w-20" />
-          <img src="/public/css3.png" alt="CSS3" class="lg:w-15 h-14 sm:h-20 w-20" />
-          <img src="/public/js.png" alt="JavaScript" class="lg:w-15 h-14 sm:h-20 w-20" />
-          <img src="/public/react.png" alt="React" class="lg:w-14 h-14 sm:h-20 w-20" />
-          <img src="/public/jQuery.png" alt="jQuery" class="lg:w-14 h-14 sm:h-20 w-20" />
+          <a href="https://html.com/" target="_blank"
+            ><img
+              src="/public/html5.png"
+              alt="HTML5"
+              class="lg:w-15 h-14 sm:h-20 w-20"
+            /></a
+          >
+          <a
+            href="https://developer.mozilla.org/en-US/docs/Web/CSS"
+            target="_blank"
+            ><img
+              src="/public/css3.png"
+              alt="CSS3"
+              class="lg:w-15 h-14 sm:h-20 w-20"
+            /></a
+          >
+          <a
+            href="https://developer.mozilla.org/en-US/docs/Web/JavaScript "
+            target="_blank"
+            ><img
+              src="/public/js.png"
+              alt="JavaScript"
+              class="lg:w-15 h-14 sm:h-20 w-20"
+            /></a
+          >
+          <a href=" https://react.dev/" target="_blank"
+            ><img
+              src="/public/react.png"
+              alt="React"
+              class="lg:w-14 h-14 sm:h-20 w-20"
+            /></a
+          >
+          <a href="https://astro.build/ " target="_blank"
+            ><img
+              src="/public/astro-svgrepo-com.png"
+              alt="HTML5"
+              class="lg:w-15 h-14 sm:h-20 w-20"
+            /></a
+          >
+          <a href="https://tailwindcss.com/ " target="_blank"
+            ><img
+              src="/public/jQuery.png"
+              alt="jQuery"
+              class="lg:w-14 h-14 sm:h-20 w-20"
+            /></a
+          >
         </div>
       </div>
-    
+
       <!-- Card 2 -->
+
       <div class="w-full bg-tech_bg text-white h-80 rounded-lg p-6">
         <div class="font-bold text-xl mb-4">Backend Technologies</div>
         <div class="flex flex-wrap gap-6">
-          <img src="/public/nodejs.svg" alt="Node.js" class="lg:w-14 h-14 sm:h-20 w-20" />
-          <img src="/public/express.svg" alt="Express.js" class="lg:w-14 h-14 sm:h-20 w-20" />
+          <a href="https://nodejs.org/en" target="_blank">
+            <img
+              src="/public/nodejs.svg"
+              alt="Node.js"
+              class="lg:w-14 h-14 sm:h-20 w-20"
+            /></a
+          >
+          <a href="https://expressjs.com/ " target="_blank"
+            ><img
+              src="/public/express.svg"
+              alt="Express.js"
+              class="lg:w-14 h-14 sm:h-20 w-20"
+            /></a
+          >
         </div>
       </div>
-    
+
       <!-- Card 3 -->
       <div class="w-full bg-tech_bg text-white h-80 rounded-lg p-6">
         <div class="font-bold text-xl mb-4">Databases</div>
         <div class="flex flex-wrap gap-6">
-          <img src="/public/mysql.svg" alt="MySQL" class="lg:w-14 h-14 sm:h-20 w-20" />
-          <img src="/public/mongo.svg" alt="MongoDB" class="lg:w-14 h-14 sm:h-20 w-20" />
+          <a href="https://www.mysql.com/ " target="_blank"
+            ><img
+              src="/public/mysql.svg"
+              alt="MySQL"
+              class="lg:w-14 h-14 sm:h-20 w-20"
+            /></a
+          >
+          <a href="https://www.mongodb.com/ " target="_blank"
+            ><img
+              src="/public/mongo.svg"
+              alt="MongoDB"
+              class="lg:w-14 h-14 sm:h-20 w-20"
+            /></a
+          >
         </div>
       </div>
-    
+
       <!-- Card 4 -->
       <div class="w-full bg-tech_bg text-white h-80 rounded-lg p-6">
         <div class="font-bold text-xl mb-4">Tools</div>
         <div class="flex flex-wrap gap-6">
-          <img src="/public/git.svg" alt="Git" class="lg:w-14 h-14 sm:h-20 w-20" />
-          <img src="/public/github.svg" alt="GitHub" class="lg:w-14 h-14 sm:h-20 w-20" />
-          <img src="/public/figma.svg" alt="Figma" class="lg:w-14 h-14 sm:h-20 w-20" />
+          <a href="https://git-scm.com/ " target="_blank">
+            <img
+              src="/public/git.svg"
+              alt="Git"
+              class="lg:w-14 h-14 sm:h-20 w-20"
+            />
+          </a>
+          <a href="https://github.com/ " target="_blank">
+            <img
+              src="/public/github.svg"
+              alt="GitHub"
+              class="lg:w-14 h-14 sm:h-20 w-20"
+            /></a
+          >
+          <a href="https://www.figma.com/ " target="_blank">
+            <img
+              src="/public/figma.svg"
+              alt="Figma"
+              class="lg:w-14 h-14 sm:h-20 w-20"
+            />
+          </a>
         </div>
       </div>
-    
+
       <!-- Additional Card Placeholder -->
       <!-- Uncomment if needed
       <div class="w-full bg-tech_bg text-white rounded-lg p-6">
         <div class="font-bold text-xl mb-4">Languages</div>
       </div> -->
     </div>
+  </div>
 </div>
