--- a/src/components/Getintouch.astro
+++ b/src/components/Getintouch.astro
@@ -14,7 +14,7 @@
     >
   
 
-    <a href="tel:9511776557"><h2 class="text-white opacity-100"><img class=" w-12 h-12 justify-centre align-middle items-center"src="/public/phone-svgrepo-com.png" alt="">9511776557  </h2>
+    <a href="tel:9511776557"><h2 class="text-white opacity-100"><img class=" w-12 h-12 justify-centre align-middle top-4items-center"src="/public/phone-svgrepo-com.png" alt="">9511776557  </h2>
   </a>
     
     </div>
