--- a/src/components/Getintouch.astro
+++ b/src/components/Getintouch.astro
@@ -14,7 +14,7 @@
     >
   
 
-    <a href="tel:9511776557"><h2 class="text-white opacity-100"><img class=" w-12 h-12 justify-centre align-middle top-4items-center"src="/public/phone-svgrepo-com.png" alt="">9511776557  </h2>
+    <a href="tel:9511776557"><h2 class="text-white opacity-100"><img class=" w-12 h-12 justify-centre align-middle top-4items-center"src="phone-svgrepo-com.png" alt="">9511776557  </h2>
   </a>
     
     </div>
@@ -22,12 +22,12 @@
     class="lg:w-60 flex justify-center pt-7 text-center items-center bg-tech_bg sm:w-[50%] sm:mx-auto  h-40  rounded-lg p-2
    ml-6"
   >
-  <h3 ><a href="mailto:aditisr0174@gmail.com" class="text-white relative bottom-4"><img class=" w-12 h-12 justify-centre items-center text-center flex align-middle relative left-14 "src="/public/email-1-svgrepo-com.png" alt="">aditisr0174@gmail.com</a></h3>
+  <h3 ><a href="mailto:aditisr0174@gmail.com" class="text-white relative bottom-4"><img class=" w-12 h-12 justify-centre items-center text-center flex align-middle relative left-14 "src="email-1-svgrepo-com.png" alt="">aditisr0174@gmail.com</a></h3>
   </div>
   <div
   class="lg:w-60 flex justify-center pt-7 text-center items-center bg-tech_bg h-40 sm:w-[50%] sm:mx-auto  text-white rounded-lg p-2
  ml-6"
-><img class=" w-12 h-12 justify-centre align-middle items-center relative bottom-7 left-16"src="/public/location-pin-alt-1-svgrepo-com.png" alt="">
+><img class=" w-12 h-12 justify-centre align-middle items-center relative bottom-7 left-16"src="location-pin-alt-1-svgrepo-com.png" alt="">
 
 <h3 class="mt-4 relative right-4">Pune , Maharashtra</h3>
 </div>
@@ -35,7 +35,7 @@
 class="lg:w-60 flex justify-center pt-7 text-center items-center bg-tech_bg h-40 sm:w-[50%] sm:mx-auto  text-white rounded-lg p-2
 ml-6"
 >
-<img class=" w-12 h-12 justify-centre align-middle relative bottom-10 left-16 items-center"src="/public/education11-svgrepo-com.png" alt="">
+<img class=" w-12 h-12 justify-centre align-middle relative bottom-10 left-16 items-center"src="education11-svgrepo-com.png" alt="">
 <h3 class="relative right-10">BE (ENTC)</h3>
 
 <h3 class="relative right-8">DIT PIMPRI</h3>
