--- a/src/components/Techstack.astro
+++ b/src/components/Techstack.astro
@@ -19,7 +19,7 @@
         <div class="flex flex-wrap gap-6">
           <a href="https://html.com/" target="_blank"
             ><img
-              src="html5.png"
+              src="AdiPortfolio/public/html5.png"
               alt="HTML5"
               class="lg:w-15 h-14 sm:h-20 w-20"
             /></a
