--- a/src/components/Techstack.astro
+++ b/src/components/Techstack.astro
@@ -28,7 +28,7 @@
             href="https://developer.mozilla.org/en-US/docs/Web/CSS"
             target="_blank"
             ><img
-              src="/public/css3.png"
+              src="AdiPortfolio/public/css3.png"
               alt="CSS3"
               class="lg:w-15 h-14 sm:h-20 w-20"
             /></a
@@ -37,7 +37,7 @@
             href="https://developer.mozilla.org/en-US/docs/Web/JavaScript "
             target="_blank"
             ><img
-              src="/public/js.png"
+              src="js.png"
               alt="JavaScript"
               class="lg:w-15 h-14 sm:h-20 w-20"
             /></a
