--- a/src/components/Resume.astro
+++ b/src/components/Resume.astro
@@ -1,7 +1,7 @@
 <div class="items-center justify-center text-center mb-40">
    <a href="https://github.com/adigithub10/Resume/raw/main/Aditi_cv%20(3).pdf " download=""><h2 class="text-bg-black text-xl text-center bg-white border-2 border-white inline-flex items-center p-3 justify-center font-bold rounded-2xl">
       Download Resume
-      <img src="/public/dddw.png" class="w-6 h-6 ml-2" alt="">
+      <img src="dddw.png" class="w-6 h-6 ml-2" alt="">
     </h2>
     </a>
 </div>
