--- a/src/components/Extraquotes.astro
+++ b/src/components/Extraquotes.astro
@@ -13,6 +13,6 @@ const quotes =[  " The Internet is the first thing that humanity has built that 
     {quotes[0]}
   </div>
   <!-- Link to client-side script -->
-  <script client:load type="module" src="/quoteCycle.js"></script>
+  <script client:load type="module" src="../public/quoteCycle.js"></script>
 </footer>
 
