--- a/src/components/Extraquotes.astro
+++ b/src/components/Extraquotes.astro
@@ -1,4 +1,5 @@
 ---
+import { displayQuote } from "../../public/quoteCycle";
 const quotes =[  " The Internet is the first thing that humanity has built that humanity doesn't understand, the largest experiment in anarchy that we have ever had. ",
 "A computer would deserve to be called intelligent if it could deceive a human into believing that it was human. — Alan Turing",
 "Your computer is only as smart as the person using it. — Mark Cuban",
