--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 interface Props {
-	title: string;
+	title: "Aditi's Portfolio";
 }
 
 const { title } = Astro.props;
@@ -10,14 +10,25 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content="This is portfolio website of Aditi Pawase" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<!-- <link rel="icon" href="/html5.png" type="image/x-icon" />
+		<link rel="icon" type="image/png" href="/html5.png" /> -->
+
+		<!-- favicons images -->
+		<link rel="icon" href="/AdiPortfolio/favicon.ico" type="image/x-icon" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/AdiPortfolio/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/AdiPortfolio/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/AdiPortfolio/favicon-16x16.png" />
+		<link rel="manifest" href="/AdiPortfolio//site.webmanifest" />
+
+
+
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body class="min-h-screen">
-		<p>THis is aditi</p>
+		<p></p>
 		<slot />
 	</body>
 </html>
