--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,9 +11,7 @@ const { title } = Astro.props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="This is portfolio website of Aditi Pawase" />
-		<meta name="viewport" content="width=device-width" />
-		<!-- <link rel="icon" href="/html5.png" type="image/x-icon" />
-		<link rel="icon" type="image/png" href="/html5.png" /> -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<!-- favicons images -->
 		<link rel="icon" href="/AdiPortfolio/favicon.ico" type="image/x-icon" />
