--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,17 +12,14 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="This is portfolio website of Aditi Pawase" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-		<!-- favicons images -->
+		
+		<!-- Favicon images -->
 		<link rel="icon" href="/AdiPortfolio/favicon.ico" type="image/x-icon" />
 		<link rel="apple-touch-icon" sizes="180x180" href="/AdiPortfolio/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/AdiPortfolio/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/AdiPortfolio/favicon-16x16.png" />
-		<link rel="manifest" href="/AdiPortfolio//site.webmanifest" />
+		<link rel="manifest" href="/AdiPortfolio/site.webmanifest" />
 
-
-
-		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body class="min-h-screen">
