--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const { title } = Astro.props;
 		<link rel="apple-touch-icon" sizes="180x180" href="/AdiPortfolio/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/AdiPortfolio/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/AdiPortfolio/favicon-16x16.png" />
-		<link rel="manifest" href="/AdiPortfolio//site.webmanifest" />
+		<link rel="manifest" href="/AdiPortfolio/site.webmanifest" />
 
 
 
