--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -1,6 +1,6 @@
 
 <div
-  class="flex bg-background  flex-wrap gap-8 border-[1.5px] mt-10 border-bg-gray-500 dark:border-gray-500 pl-4 pr-8 rounded-full absolute bg-neutral-00 left-[22vw] sm:ml-20 lg:ml-1"
+  class="flex bg-background justify-evenly items-center content-stretch flex-wrap gap-8 border-[1.5px] mt-10 border-bg-gray-500 dark:border-gray-500 pl-4 pr-8 rounded-full absolute bg-neutral-00 left-[22vw] sm:ml-20 lg:ml-1 h-16"
 >
 //removed width
  <div class="pl--10">
