css corrections corrected

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Quote from '../components/Quote.astro';
 import Resume from '../components/Resume.astro';
 import Navbar from '../components/Navbar.astro'
 import Extraquotes from '../components/Extraquotes.astro'
+import Trialsocials from '../components/trialsocials.astro';
 
 
 const value = "< Aditi Pawase />";
@@ -48,7 +49,8 @@ const value = "< Aditi Pawase />";
        Web Developer
     </h3>
  </div>
- <Socials />
+ <!-- <Socials /> -->
+  <Trialsocials />
  <br>
  <br>
  <h1></h1>
