--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,6 +49,28 @@ const value = "< Aditi Pawase />";
        Web Developer
     </h3>
  </div>
+ <br>
+ <br>
+ <br>
+ <div class="text-snow_white">
+  <br><br>
+  
+  <h3 class="text-center text-2xl font-sans sm:text-xl md:text-2xl lg:text-3xl">
+    Hii! I am Aditi.
+  </h3>
+  
+  <br>
+  
+  <pre class="text-start text-lg sm:text-base md:text-lg lg:text-xl pl-8 sm:pl-4 md:pl-6 lg:pl-8">
+    I'm pre-final year Engineering student having interest in development. I love tea, development, 
+    japanese, and among others. Glad to have you here! Feel free to look around :)
+  </pre>
+  
+  <pre class="text-start text-lg sm:text-base md:text-lg lg:text-xl pl-8 sm:pl-4 md:pl-6 lg:pl-8">
+    This is my canvas of thoughts, ideas, and inspirations.
+  </pre>
+  <br>
+</div>
  <!-- <Socials /> -->
   <Trialsocials />
  <br>
