--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,7 +67,7 @@ const value = "< Aditi Pawase />";
   </pre>
   
   <pre class="text-start text-lg sm:text-base md:text-lg lg:text-xl pl-8 sm:pl-4 md:pl-6 lg:pl-8">
-    This is my canvas of thoughts, ideas, and inspirations.
+    This is my canvas of thoughts, ideas, & inspirations.
   </pre>
   <br>
 </div>
