--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,6 +72,7 @@ const value = "< Aditi Pawase />";
   <br>
 </div>
  <!-- <Socials /> -->
+  <!-- components are added like react only -->
   <Trialsocials />
  <br>
  <br>
