--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,101 +1,97 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
+import Card from "../components/Card.astro";
 
-import Socials from '../components/Socials.astro';
-import Techstack from '../components/Techstack.astro';
-import Getintouch from '../components/Getintouch.astro';
-import Quote from '../components/Quote.astro';
-import Resume from '../components/Resume.astro';
-import Navbar from '../components/Navbar.astro'
-import Extraquotes from '../components/Extraquotes.astro'
-import Trialsocials from '../components/Trialsocials.astro';
-
+import Socials from "../components/Socials.astro";
+import Techstack from "../components/Techstack.astro";
+import Getintouch from "../components/Getintouch.astro";
+import Quote from "../components/Quote.astro";
+import Resume from "../components/Resume.astro";
+import Navbar from "../components/Navbar.astro";
+import Extraquotes from "../components/Extraquotes.astro";
+import Trialsocials from "../components/Trialsocials.astro";
 
 const value = "< Aditi Pawase />";
-
-
 ---
 
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Spirax&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&display=swap');
-  
-  </style>
-<!doctype html>
-<html lang="en">
+  @import url("https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Spirax&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&display=swap");
+</style>
 
- 
-  <body class=" bg-black h-100" >
+<html lang="en">
+  <body class="bg-black h-100">
     <div>
       <Navbar />
       <div>
-	<h1 class="font-custom text-5xl md:text-[112px] mt-20 text-center leading-none  px-4 py-20 hero-title z-10 text-white opacity-80"
-  >Aditi Pawase</h1>
-</div>
-   <h3 class="text-myorange [text-shadow:1px_3px_8px_var(--tw-shadow-color)] shadow-myorange hover:cursor-pointer hover:text-red-200 relative bottom-20  right-60 text-right font-semibold px-20   justify-end  md:text-[20px]" >{value}</h3>
-  <!-- <div class="flex items-centre  relative left-40 justify-centre content-centre  px-4 py-0">
+        <h1
+          class="font-custom text-5xl md:text-[112px] mt-20 text-center leading-none px-4 py-20 hero-title z-10 text-white opacity-80"
+        >
+          Aditi Pawase
+        </h1>
+      </div>
+      <h3
+        class="text-myorange [text-shadow:1px_3px_8px_var(--tw-shadow-color)] shadow-myorange hover:cursor-pointer hover:text-red-200 relative bottom-20 right-60 text-right font-semibold px-20 justify-end md:text-[20px]"
+      >
+        {value}
+      </h3>
+      <!-- <div class="flex items-centre  relative left-40 justify-centre content-centre  px-4 py-0">
    
    <h3  class="font-title text-4xlbv  md:text-[20px] justify-center inline-block p-4 text-center ml-20 mr-5 leading-none border border-cyan-900 rounded-3xl  bg-cyan-900 hero-title z-10 text-white ">Student</h3>
    <h3  class="font-title text-4xl md:text-[20px] justify-center inline-block p-4 text-center ml-3 leading-none border border-cyan-900 rounded-3xl  bg-cyan-900 hero-title z-10 text-white ">Web developer</h3>
 	</div>  -->
-  <div class="flex items-center relative justify-center lg:justify-start lg:w-[60%] mx-auto px-4 py-0">
-    <h3 class="font-title text-4xl md:text-[20px] inline-block p-4 text-center ml-10 md:ml-5 hover:cursor-pointer hover:text-gray-900 leading-none border border-cyan-900 rounded-3xl bg-cyan-900 hero-title z-10 text-white">
-       Student
-    </h3>
-    <h3 class="font-title text-4xl md:text-[20px] hover:cursor-pointer hover:text-gray-900 inline-block p-4 text-center ml-3 leading-none border border-cyan-900 rounded-3xl bg-cyan-900 hero-title z-10 text-white">
-       Web Developer
-    </h3>
- </div>
- <br>
- <br>
- <br>
- <div class="text-snow_white">
-  <br><br>
-  
-  <h3 class="text-center text-2xl font-sans sm:text-xl md:text-2xl lg:text-3xl">
-    Hii! I am Aditi.
-  </h3>
-  
-  <br>
-  
-  <pre class="text-start text-lg sm:text-base md:text-lg lg:text-xl pl-8 sm:pl-4 md:pl-6 lg:pl-8">
-    I'm pre-final year Engineering student having interest in development. I love tea, development, 
-    japanese, and among others. Glad to have you here! Feel free to look around :)
-  </pre>
-  
-  <pre class="text-start text-lg sm:text-base md:text-lg lg:text-xl pl-8 sm:pl-4 md:pl-6 lg:pl-8">
-    This is my canvas of thoughts, ideas, & inspirations.
-  </pre>
-  <br>
-</div>
- <!-- <Socials /> -->
-  <!-- components are added like react only -->
-  <Trialsocials />
- <br>
- <br>
- <h1></h1>
-  <div><Techstack /></div>
- 
+      <div
+        class="flex items-center relative justify-center lg:justify-start lg:w-[60%] mx-auto px-4 py-0"
+      >
+        <h3
+          class="font-title text-4xl md:text-[20px] inline-block p-4 text-center ml-10 md:ml-5 hover:cursor-pointer hover:text-gray-900 leading-none border border-cyan-900 rounded-3xl bg-cyan-900 hero-title z-10 text-white"
+        >
+          Student
+        </h3>
+        <h3
+          class="font-title text-4xl md:text-[20px] hover:cursor-pointer hover:text-gray-900 inline-block p-4 text-center ml-3 leading-none border border-cyan-900 rounded-3xl bg-cyan-900 hero-title z-10 text-white"
+        >
+          Web Developer
+        </h3>
+      </div>
+      <div class="text-snow_white">
+        <div class="mt-1">
+          <Trialsocials />
+        </div>
+        <br />
+        <br />
+        <br />
 
+        <div class="mt-20">
+          <pre
+            class="text-center text-2xl font-sans sm:text-xl md:text-2xl lg:text-3xl">
+      Hii! I am Aditi.
+    </pre>
 
- <div> <Getintouch /></div>
- <div><Resume /></div>
- <div> <Extraquotes /> </div>
+          <br />
 
- 
+          <pre
+            class="text-center text-lg sm:text-base md:text-lg lg:text-xl pl-8 sm:pl-4 md:pl-6 lg:pl-8">
+      I'm pre-final year Engineering student having interest in development. I love tea, development, 
+      japanese, and among others. Glad to have you here! Feel free to look around :)
+      <pre>
+        This is my canvas of thoughts, ideas, & inspirations.
+      </pre>
+    </pre>
+        </div>
+      </div>
+      <br />
+    </div>
 
+    <br />
+    <br />
+    <h1></h1>
+    <div><Techstack /></div>
 
-
-</div>
-</div>
-
- 
- 
- 
-
+    <div><Getintouch /></div>
+    <div><Resume /></div>
+    <div><Extraquotes /></div>
   </body>
-</div>
-  </html>
+</html>
